fixing artifactID and group
